Update hero-b to prevent line breaks on brn-01 link

--- a/src/scss/framework/components/hero/_c--hero-b.scss
+++ b/src/scss/framework/components/hero/_c--hero-b.scss
@@ -31,6 +31,7 @@
                 @extend .g--btn-01;
                 @extend .g--btn-01--second;
                 width: fit-content;
+                white-space: nowrap;
             }
         }
     }
